# bugbite

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  prek.toml
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/data/: bite.toml
crates/cli/doc/: Makefile  asciidoctor.rb  bite-bugzilla-attach.adoc  bite-bugzilla-attachment-create.adoc  bite-bugzilla-attachment-get.adoc  bite-bugzilla-attachment-update.adoc  bite-bugzilla-attachment.adoc  bite-bugzilla-comment.adoc  bite-bugzilla-create.adoc  bite-bugzilla-get.1.adoc  bite-bugzilla-get.adoc  bite-bugzilla-history.adoc  bite-bugzilla-modify.adoc  bite-bugzilla-search.adoc  bite-bugzilla-update.adoc  bite-bugzilla-user-create.adoc  bite-bugzilla-user-get.adoc  bite-bugzilla-user-update.adoc  bite-bugzilla-user.adoc  bite-bugzilla-version.adoc  bite-bugzilla.1.adoc  bite-bugzilla.adoc  bite-github-get.adoc  bite-github.adoc  bite-redmine-get.1.adoc  bite-redmine-get.adoc  bite-redmine-search.1.adoc  bite-redmine-search.adoc  bite-redmine.1.adoc  bite-redmine.adoc  bite-show-connections.adoc  bite-show-services.adoc  bite-show.adoc  bite.1.adoc  bite.adoc  generate_docs  index.adoc
crates/cli/doc/common/: template-options.adoc
crates/cli/doc/include/: global-options.adoc  header.adoc  service-options.adoc  template-options.adoc
crates/cli/services/: bugzilla.toml
crates/cli/src/: command.rs  compgen.rs  config.rs  generate.rs  macros.rs  main.rs  mangen.rs  options.rs  service.rs  subcmds.rs  test.rs  utils.rs
crates/cli/src/service/: args.rs  bugzilla.rs  github.rs  output.rs  redmine.rs
crates/cli/src/service/bugzilla/: attach.rs  attachment.rs  attachments.rs  comment.rs  comments.rs  create.rs  fields.rs  get.rs  history.rs  modify.rs  search.rs  update.rs  user.rs  version.rs
crates/cli/src/service/bugzilla/attachment/: create.rs  get.rs  update.rs
crates/cli/src/service/bugzilla/user/: create.rs  get.rs  update.rs
crates/cli/src/service/github/: get.rs  modify.rs  search.rs
crates/cli/src/service/redmine/: get.rs  search.rs
crates/cli/src/subcmds/: show.rs
crates/cli/src/subcmds/show/: connections.rs  services.rs
crates/cli/testdata/: bugbite
crates/cli/testdata/output/bugzilla/attachment/: single-without-data
crates/cli/testdata/output/bugzilla/attachments/: single-without-data
crates/cli/testdata/output/bugzilla/comment/: description  multiple-bugs  single-bug
crates/cli/testdata/output/bugzilla/get/: multiple-bugs  single-bug  single-bug-attachments  single-bug-default  single-bug-no-attachments
crates/cli/testdata/output/bugzilla/history/: multiple-bugs  single-bug
crates/cli/tests/bite/: bugzilla.rs  command.rs  completion.rs  main.rs  redmine.rs  service.rs  show.rs
crates/cli/tests/bite/bugzilla/: attach.rs  attachment.rs  attachments.rs  comment.rs  comments.rs  create.rs  fields.rs  get.rs  history.rs  modify.rs  search.rs  update.rs  version.rs
crates/cli/tests/bite/bugzilla/attachment/: create.rs  get.rs  update.rs
crates/cli/tests/bite/redmine/: get.rs  search.rs
crates/cli/tests/bite/service/: bugzilla.rs  redmine.rs
crates/cli/tests/bite/service/bugzilla/: attachment.rs  comment.rs  create.rs  fields.rs  get.rs  history.rs  search.rs  update.rs  user.rs  version.rs
crates/cli/tests/bite/service/redmine/: get.rs  search.rs
crates/cli/tests/bugzilla/: command.rs  create.rs  main.rs  search.rs  update.rs
crates/lib/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/lib/src/: args.rs  client.rs  config.rs  connection.rs  error.rs  lib.rs  objects.rs  output.rs  query.rs  serde.rs  service.rs  services.rs  test.rs  time.rs  traits.rs  types.rs  utils.rs
crates/lib/src/args/: csv.rs  exists.rs  maybe_stdin.rs
crates/lib/src/client/: bugzilla.rs  github.rs  redmine.rs
crates/lib/src/error/: python.rs
crates/lib/src/objects/: bugzilla.rs  github.rs  redmine.rs
crates/lib/src/output/: bugzilla.rs  github.rs  redmine.rs
crates/lib/src/service/: bugzilla.rs  github.rs  redmine.rs
crates/lib/src/service/bugzilla/: attach.rs  attachment.rs  attachments.rs  comment.rs  comments.rs  create.rs  fields.rs  get.rs  history.rs  modify.rs  search.rs  update.rs  version.rs
crates/lib/src/service/bugzilla/attachment/: create.rs  get.rs  get_item.rs  update.rs
crates/lib/src/service/bugzilla/user/: create.rs  get.rs  update.rs
crates/lib/src/service/github/: attachments.rs  create.rs  get.rs  modify.rs  search.rs
crates/lib/src/service/redmine/: create.rs  get.rs  modify.rs  search.rs
crates/lib/src/test/: bugzilla.rs  internal.rs
crates/lib/src/time/: delta.rs  static.rs
crates/lib/src/types/: ordered.rs  ordered_set.rs
crates/lib/testdata/bugzilla/attachment/: invalid.json
crates/lib/testdata/bugzilla/attachment/create/: multiple.json  single.json
crates/lib/testdata/bugzilla/attachment/get/: bug-with-attachments.json  bugs-with-no-attachments.json  deleted.json  multiple-plain-text.json  multiple-without-data.json  nonexistent.json  single-plain-text.json  valid
crates/lib/testdata/bugzilla/attachments/: single-without-data.json
crates/lib/testdata/bugzilla/comment/: description.json  multiple-bugs.json  nonexistent.json  single-bug.json
crates/lib/testdata/bugzilla/fields/: gentoo.json
crates/lib/testdata/bugzilla/get/: invalid.json  multiple-bugs.json  single-bug.json
crates/lib/testdata/bugzilla/history/: multiple-bugs.json  nonexistent.json  single-bug.json
crates/lib/testdata/bugzilla/search/: ids.json  valid
crates/lib/testdata/bugzilla/update/: no-changes.json  summary.json  valid
crates/lib/testdata/redmine/get/: single.json
crates/lib/testdata/redmine/search/: nonexistent.json  valid
crates/python/: Cargo.toml  MANIFEST.in  README.md  pyproject.toml
crates/python/examples/: test-services
crates/python/src/: bugzilla.rs  config.rs  error.rs  lib.rs  macros.rs  redmine.rs  service.rs  traits.rs  utils.rs
crates/python/src/bugzilla/: objects.rs  search.rs
crates/python/src/redmine/: objects.rs  search.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: main.rs
doc/: Makefile
(+48 files in other folders)
