[package]
name = "bugbite-cli"
version = "0.0.14"
description = "command line tool for bug, issue, and ticket mangling"
documentation = "https://github.com/radhermit/bugbite"
homepage = "https://github.com/radhermit/bugbite"
repository = "https://github.com/radhermit/bugbite"
license = "Apache-2.0 OR MIT"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "bite"
path = "src/main.rs"

[[test]]
name = "bite"
required-features = ["test"]

[[test]]
name = "bugzilla"
required-features = ["test-bugzilla"]

[features]
default = ["rustls-tls"]
# use system libraries for TLS
native-tls = ["bugbite/native-tls"]
# use rustls for TLS
rustls-tls = ["bugbite/rustls-tls"]
# test support
test = ["bugbite/test"]
# bugzilla integration tests that require a local instance
test-bugzilla = ["bugbite/test", "bugbite/test-bugzilla"]

[dependencies]
anyhow = "1.0.100"
bugbite = { path = "../lib", version = "0.0.14", features = ["output"] }
byte-unit = "5.2.0"
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.53", features = ["cargo", "derive", "env", "wrap_help"] }
clap_complete = "4.5.61"
clap-verbosity-flag = "3.0.4"
crossterm = "0.29.0"
enum-as-inner = "0.6.1"
futures-util = "0.3.31"
indexmap = { version = "2.12.1", features = ["serde"] }
indoc = "2.0.7"
itertools = "0.14.0"
libc = "0.2.178"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = { version = "3.16.1", default-features = false, features = ["macros"] }
shlex = "1.3.0"
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.23.0"
textwrap = "0.16.2"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.22"
unicode-segmentation = "1.12.0"

[dev-dependencies]
assert_cmd = "2.1.1"
ctor = "0.6.3"
predicates = "3.1.3"
wiremock = { version = "0.6.5" }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "txz"
disabled-strategies = ["quick-install", "compile"]
