[package]
name = "bugbite-cli"
version = "0.0.14"
description = "command line tool for bug, issue, and ticket mangling"
documentation = "https://github.com/radhermit/bugbite"
homepage = "https://github.com/radhermit/bugbite"
repository = "https://github.com/radhermit/bugbite"
license = "Apache-2.0 OR MIT"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "bite"
path = "src/main.rs"

[[test]]
name = "bite"
required-features = ["test"]

[[test]]
name = "bugzilla"
required-features = ["test-bugzilla"]

[features]
default = ["rustls"]
# use system libraries for TLS
native-tls = ["bugbite/native-tls"]
# use rustls for TLS
rustls = ["bugbite/rustls"]
# test support
test = ["bugbite/test"]
# bugzilla integration tests that require a local instance
test-bugzilla = ["bugbite/test", "bugbite/test-bugzilla"]

[dependencies]
anyhow = "1.0.102"
bugbite = { path = "../lib", version = "0.0.14", features = ["output"] }
byte-unit = "5.2.0"
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.6.1", features = ["cargo", "derive", "env", "wrap_help"] }
clap_complete = "4.6.2"
clap-verbosity-flag = "3.0.4"
crossterm = "0.29.0"
enum-as-inner = "0.7.0"
futures-util = "0.3.32"
indexmap = { version = "2.14.0", features = ["serde"] }
indoc = "2.0.7"
itertools = "0.14.0"
libc = "0.2.185"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.18.0", default-features = false, features = ["macros"] }
shlex = "1.3.0"
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3.27.0"
textwrap = "0.16.2"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.23"
unicode-segmentation = "1.13.2"

[dev-dependencies]
assert_cmd = "2.2.1"
ctor = "0.10.0"
predicates = "3.1.4"
wiremock = { version = "0.6.5" }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "txz"
disabled-strategies = ["quick-install", "compile"]
