[package]
name = "bugbite"
version = "0.0.12"
description = "library for bug, issue, and ticket mangling"
documentation = "https://github.com/radhermit/bugbite"
homepage = "https://github.com/radhermit/bugbite"
repository = "https://github.com/radhermit/bugbite"
license = "Apache-2.0 OR MIT"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "bugbite"

[features]
default = []
# external test support
test = ["dep:wiremock"]
# bugzilla integration tests that require a local instance
test-bugzilla = []

[dependencies]
base64 = "0.22.1"
byte-unit = "5.1.4"
#byte-unit = { version = "5.1.4", default-features = false, features = ["byte"] }
camino = { version = "1.1.9", features = ["serde1"] }
chrono = { version = "0.4.38", features = ["serde"] }
chronoutil = "0.2.7"
enum-as-inner = "0.6.0"
humansize = "2.1.3"
infer = "0.16.0"
indexmap = { version = "2.4.0", features = ["serde"] }
itertools = "0.13.0"
once_cell = "1.19.0"
ordered-multimap = "0.7.3"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_with = { version = "3.9.0", default-features = false, features = ["macros"] }
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.12.0"
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"] }

# exported test support deps
wiremock = { version = "0.6.1", optional = true }

[dependencies.reqwest]
version = "0.12.7"
default-features = false
features = ["cookies", "hickory-dns", "json", "rustls-tls"]

[dev-dependencies]
serde_test = "1.0.177"
tokio = { version = "1.39.3", features = ["full"] }
