[package]
name = "bugbite"
version = "0.0.14"
description = "library for bug, issue, and ticket mangling"
documentation = "https://github.com/radhermit/bugbite"
homepage = "https://github.com/radhermit/bugbite"
repository = "https://github.com/radhermit/bugbite"
license = "Apache-2.0 OR MIT"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
name = "bugbite"

[features]
default = ["rustls-tls"]
# use system libraries for TLS
native-tls = ["reqwest/native-tls"]
# use rustls for TLS
rustls-tls = ["reqwest/rustls-tls"]
# support rendering output
output = ["dep:crossterm", "dep:textwrap", "dep:unicode-segmentation"]
# support for python bindings
python = ["dep:pyo3"]
# external test support
test = ["dep:wiremock"]
# bugzilla integration tests that require a local instance
test-bugzilla = []

[dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
byte-unit = { version = "5.1.6", features = ["serde"] }
camino = { version = "1.1.9", features = ["serde1"] }
chrono = { version = "0.4.39", features = ["serde"] }
chronoutil = "0.2.7"
dirs-next = "2.0.0"
enum-as-inner = "0.6.1"
futures-util = "0.3.31"
infer = "0.16.0"
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.13.0"
ordered-multimap = "0.7.3"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_repr = "0.1.19"
serde_with = { version = "3.12.0", default-features = false, features = ["alloc", "macros"] }
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.16.0"
thiserror = "2.0.11"
toml = "0.8.19"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }

# used for output support
crossterm = { version = "0.28.1", optional = true }
textwrap = { version = "0.16.1", optional = true }
unicode-segmentation = { version = "1.12.0", optional = true }

# used for python bindings
pyo3 = { version = "0.23.4", optional = true }

# exported test support deps
wiremock = { version = "0.6.2", optional = true }

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["cookies", "hickory-dns", "json", "socks"]

[dev-dependencies]
indoc = "2.0.5"
serde_test = "1.0.177"
tokio = { version = "1.43.0", features = ["full"] }
