[package]
name = "bugbite-python"
version = "0.0.1"
description = "Python bindings for bugbite"
documentation = "https://github.com/radhermit/bugbite"
homepage = "https://github.com/radhermit/bugbite"
repository = "https://github.com/radhermit/bugbite"
readme = "README.md"
license = "MIT"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "bugbite"
crate-type = ["cdylib"]

[dependencies]
bugbite = { path = "../lib", version = "0.0.14", features = ["output", "python"] }
chrono = "0.4.41"
futures-util = "0.3.31"
indexmap = "2.10.0"
itertools = "0.14.0"
pyo3 = { version = "0.25.1", features = ["extension-module", "indexmap"] }
tokio = { version = "1.47.0", features = ["full"] }
