[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bugbite"
description = "python bindings for bugbite"
authors = [{name = "Tim Harder", email = "radhermit@gmail.com"}]
requires-python = ">=3.12"
keywords = ["bugs"]
license = {text = "MIT"}
dynamic = ["version"]

[tool.maturin]
compatibility = "linux"
