[package]
name = "bugbite-tui"
version = "0.0.1"
description = "terminal application for bug, issue, and ticket mangling"
documentation = "https://github.com/radhermit/bugbite"
homepage = "https://github.com/radhermit/bugbite"
repository = "https://github.com/radhermit/bugbite"
license = "Apache-2.0 OR MIT"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "chew"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
bugbite = { path = "../lib", version = "0.0.4" }
crossterm = "0.27.0"
ratatui = "0.26.1"
